CaptureTimer started, untested

--- a/flask/script_access_database.ipynb
+++ b/flask/script_access_database.ipynb
@@ -28,20 +28,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Campaign(id:0, 'hourly' is active:True, start:2021-12-05 13:00:00, end:2099-01-01 00:00:00, interval:1:00:00)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "t = dt.datetime.now()    \n",
     "next_hour = t.replace(second=0, microsecond=0, minute=0, hour=t.hour+1)\n",
@@ -60,27 +49,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Campaign(id:0, 'hourly' is active:True, start:2021-12-05 13:00:00, end:2099-01-01 00:00:00, interval:1:00:00),\n",
-       " Campaign(id:1, 'understand the light' is active:True, start:2021-12-05 12:54:00, end:2021-12-12 12:54:00, interval:0:00:30)]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Campaign.query.all()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -92,6 +60,27 @@
       ]
      },
      "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Campaign.query.all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Campaign(id:0, 'hourly' is active:True, start:2021-12-05 13:00:00, end:2099-01-01 00:00:00, interval:1:00:00),\n",
+       " Campaign(id:1, 'understand the light' is active:True, start:2021-12-05 12:54:00, end:2021-12-12 12:54:00, interval:0:00:30)]"
+      ]
+     },
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,143 +114,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Campaign(id:0, 'hourly' is active:True, start:2021-12-05 13:00:00, end:2099-01-01 00:00:00, interval:1:00:00),\n",
-       " Campaign(id:1, 'understand the light' is active:True, start:2021-12-05 12:54:00, end:2021-12-12 12:54:00, interval:0:00:30)]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cmps"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_next_capture(cmps):\n",
-    "    \"\"\"\n",
-    "    Returns <dict> of for the next capture, with two items:\n",
-    "        \"sleeptime\": time <float> in seconds to sleep until this capture\n",
-    "        \"campain\": campaign <Campaign> of the next captur\n",
-    "\n",
-    "    Args:\n",
-    "        cmps <list>: List of campaigns <Campaign>\n",
-    "    \"\"\"\n",
-    "    pending = {}   # pending captures with <timedelta> keys and <int> index values\n",
-    "    now = dt.datetime.now()\n",
-    "    for idx, cmp in enumerate(cmps):\n",
-    "        # Overdue detection for immidiate capture\n",
-    "        overdue = False\n",
-    "        if now > cmp.start:\n",
-    "            if cmp.previous is None:\n",
-    "                overdue = True\n",
-    "            else:\n",
-    "                next = cmp.previous + cmp.interval\n",
-    "                print(\"next:\", next)\n",
-    "                if now >= next:\n",
-    "                    overdue = True\n",
-    "                    \n",
-    "        if overdue:\n",
-    "            return {\"sleeptime\": 0, \"campaign\": cmp}\n",
-    "        \n",
-    "        if now <= cmp.start:  # case: start time in the future\n",
-    "            next_capture = cmp.start\n",
-    "        else:  # case: ongoing campaign\n",
-    "            next_capture = cmp.previous + cmp.interval\n",
-    "        seconds_until_capture = max((next_capture - now) / dt.timedelta(seconds=1.0), 0.0) \n",
-    "        print(\"next_capture:\", next_capture, seconds_until_capture)\n",
-    "        pending[seconds_until_capture] = cmp\n",
-    "            \n",
-    "    print(\"todo: realign seconds function\")\n",
-    "\n",
-    "    print(\"pending:\")\n",
-    "    for item in pending.items():\n",
-    "        print(\"-\", item)\n",
-    "    min_sleeptime, next_cmp = sorted(pending.items())[0]\n",
-    "    return {\"sleeptime\": min_sleeptime, \"campaign\": next_cmp}\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'sleeptime': 0,\n",
-       " 'campaign': Campaign(id:0, 'hourly' is active:True, start:2021-12-05 13:00:00, end:2099-01-01 00:00:00, interval:1:00:00)}"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "get_next_capture(cmps)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "testvector = [Campaign(title=\"T1\", is_active=True, start=dt.datetime(2021,12,6), end=dt.datetime(2099,1,1), previous=None, interval=dt.timedelta(seconds=3600)), \n",
-    "              Campaign(title=\"T2\", is_active=True, start=dt.datetime(2021,12,5), end=dt.datetime(2099,1,1), previous=dt.datetime(2021,12,5,21), interval=dt.timedelta(seconds=3600)), \n",
-    "              Campaign(title=\"T3\", is_active=True, start=dt.datetime(2021,12,8), end=dt.datetime(2099,1,1), previous=None, interval=dt.timedelta(seconds=3600)), \n",
-    "              ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "next_capture: 2021-12-06 00:00:00 9199.99196\n",
-      "next: 2021-12-05 22:00:00\n",
-      "next_capture: 2021-12-05 22:00:00 1999.99196\n",
-      "next_capture: 2021-12-08 00:00:00 181999.99196\n",
-      "todo: realign seconds function\n",
-      "pending:\n",
-      "- (9199.99196, Campaign(id:None, 'T1' is active:True, start:2021-12-06 00:00:00, end:2099-01-01 00:00:00, interval:1:00:00))\n",
-      "- (1999.99196, Campaign(id:None, 'T2' is active:True, start:2021-12-05 00:00:00, end:2099-01-01 00:00:00, interval:1:00:00))\n",
-      "- (181999.99196, Campaign(id:None, 'T3' is active:True, start:2021-12-08 00:00:00, end:2099-01-01 00:00:00, interval:1:00:00))\n"
+      "default timer\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'sleeptime': 1999.99196,\n",
-       " 'campaign': Campaign(id:None, 'T2' is active:True, start:2021-12-05 00:00:00, end:2099-01-01 00:00:00, interval:1:00:00)}"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_next_capture(testvector)"
+    "import threading\n",
+    "import time\n",
+    "\n",
+    "def hello():\n",
+    "    print(\"hello, Timer\")\n",
+    "\n",
+    "\n",
+    "t = threading.Timer(-0.1, lambda: print(\"default timer\"))\n",
+    "t.start()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t.cancel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
