changed to db.session access

--- a/database/database_tutorial/read_db.ipynb
+++ b/database/database_tutorial/read_db.ipynb
@@ -10,25 +10,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\envs\\flask_env\\lib\\site-packages\\flask_sqlalchemy\\__init__.py:872: FSADeprecationWarning: SQLALCHEMY_TRACK_MODIFICATIONS adds significant overhead and will be disabled by default in the future.  Set it to True or False to suppress this warning.\n",
-      "  warnings.warn(FSADeprecationWarning(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from database_app import WalliStat, Campaign"
+    "from database_app import db, WalliStat, Campaign"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +28,7 @@
        "[WalliStat(id:1-->campaign.id:0, 2021-07-25 01:01:53: 27.5°C, 0W),\n",
        " WalliStat(id:2-->campaign.id:0, 2021-07-25 01:01:58: 27.5°C, 0W),\n",
        " WalliStat(id:3-->campaign.id:0, 2021-07-25 01:02:15: 27.5°C, 0W),\n",
-       " WalliStat(id:4-->campaign.id:0, 2021-07-25 01:02:20: 27.5°C, 0W),\n",
+       " WalliStat(id:4-->campaign.id:0, 2021-07-25 01:02:20: 27.5°C, 43W),\n",
        " WalliStat(id:5-->campaign.id:0, 2021-07-25 01:02:25: 27.5°C, 531W),\n",
        " WalliStat(id:6-->campaign.id:0, 2021-07-25 01:02:30: 27.5°C, 1641W),\n",
        " WalliStat(id:7-->campaign.id:1, 2021-07-25 10:23:31: 32.8°C, 0W),\n",
@@ -45,13 +36,13 @@
        " WalliStat(id:9-->campaign.id:1, 2021-07-25 10:23:41: 32.8°C, 0W)]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "WalliStat.query.all()"
+    "db.session.query(WalliStat).all()"
    ]
   },
   {
@@ -63,22 +54,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Campaign(id:0, 'hourly' is active:True, start:2021-10-17 22:00:00, end:None, interval:1:00:00)"
+       "Campaign(id:0, 'hourly' is active:True, start:2021-12-10 22:00:00, end:None, interval:1:00:00)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hourly = Campaign.query.filter(Campaign.title==\"hourly\").first()\n",
+    "hourly = db.session.query(Campaign).filter(Campaign.title==\"hourly\").first()\n",
     "hourly"
    ]
   },
@@ -109,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -118,81 +109,51 @@
        "[WalliStat(id:1-->campaign.id:0, 2021-07-25 01:01:53: 27.5°C, 0W),\n",
        " WalliStat(id:2-->campaign.id:0, 2021-07-25 01:01:58: 27.5°C, 0W),\n",
        " WalliStat(id:3-->campaign.id:0, 2021-07-25 01:02:15: 27.5°C, 0W),\n",
-       " WalliStat(id:4-->campaign.id:0, 2021-07-25 01:02:20: 27.5°C, 0W),\n",
+       " WalliStat(id:4-->campaign.id:0, 2021-07-25 01:02:20: 27.5°C, 43W),\n",
        " WalliStat(id:5-->campaign.id:0, 2021-07-25 01:02:25: 27.5°C, 531W),\n",
        " WalliStat(id:6-->campaign.id:0, 2021-07-25 01:02:30: 27.5°C, 1641W)]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "WalliStat.query.filter(WalliStat.campaign==hourly).all()"
+    "db.session.query(WalliStat).filter(WalliStat.campaign==hourly).all()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Update"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Campaign(id:0, 'hourly' is active:True, start:2021-10-17 22:00:00, end:None, interval:1:00:00),\n",
-       " Campaign(id:1, 'High frequency polling for error checking.' is active:True, start:2021-10-17 21:11:22.790858, end:2021-10-18 21:11:22.790858, interval:0:00:01)]"
+       "[WalliStat(id:1-->campaign.id:0, 2021-07-25 01:01:53: 27.5°C, 0W),\n",
+       " WalliStat(id:2-->campaign.id:0, 2021-07-25 01:01:58: 27.5°C, 0W),\n",
+       " WalliStat(id:3-->campaign.id:0, 2021-07-25 01:02:15: 27.5°C, 0W),\n",
+       " WalliStat(id:4-->campaign.id:0, 2021-07-25 01:02:20: 27.5°C, 43W),\n",
+       " WalliStat(id:5-->campaign.id:0, 2021-07-25 01:02:25: 27.5°C, 500W),\n",
+       " WalliStat(id:6-->campaign.id:0, 2021-07-25 01:02:30: 27.5°C, 500W)]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cpns = Campaign.query.all()\n",
-    "cpns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Campaign(id:1, 'High frequency polling for error checking.' is active:True, start:2021-10-17 21:11:22.790858, end:2021-10-18 21:11:22.790858, interval:0:00:01)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cpn = cpns[1]\n",
-    "cpn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "datetime.datetime(2021, 10, 17, 21, 11, 22, 790858)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cpn.start"
+    "db.session.query(WalliStat).filter(WalliStat.Power > 500).update({\"Power\": 500})\n",
+    "db.session.query(WalliStat).filter(WalliStat.campaign==hourly).all()"
    ]
   },
   {
