--- a/database/database_tutorial/write_db.ipynb
+++ b/database/database_tutorial/write_db.ipynb
@@ -10,9 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\envs\\flask_env\\lib\\site-packages\\flask_sqlalchemy\\__init__.py:872: FSADeprecationWarning: SQLALCHEMY_TRACK_MODIFICATIONS adds significant overhead and will be disabled by default in the future.  Set it to True or False to suppress this warning.\n",
+      "  warnings.warn(FSADeprecationWarning(\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import datetime as dt\n",
@@ -21,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +389,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#db.session.query(Campaign).filter(Campaign.id==campaign.id).update({\"previous\": now})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.session.query(WalliStat).filter(WalliStat.Temp>1).update({\"Power\": 22})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -389,18 +427,21 @@
        "[WalliStat(id:1-->campaign.id:0, 2021-07-25 01:01:53: 27.5°C, 0W),\n",
        " WalliStat(id:2-->campaign.id:0, 2021-07-25 01:01:58: 27.5°C, 0W),\n",
        " WalliStat(id:3-->campaign.id:0, 2021-07-25 01:02:15: 27.5°C, 0W),\n",
-       " WalliStat(id:4-->campaign.id:0, 2021-07-25 01:02:20: 27.5°C, 0W),\n",
+       " WalliStat(id:4-->campaign.id:0, 2021-07-25 01:02:20: 27.5°C, 43W),\n",
        " WalliStat(id:5-->campaign.id:0, 2021-07-25 01:02:25: 27.5°C, 531W),\n",
-       " WalliStat(id:6-->campaign.id:0, 2021-07-25 01:02:30: 27.5°C, 1641W)]"
+       " WalliStat(id:6-->campaign.id:0, 2021-07-25 01:02:30: 27.5°C, 1641W),\n",
+       " WalliStat(id:7-->campaign.id:1, 2021-07-25 10:23:31: 32.8°C, 0W),\n",
+       " WalliStat(id:8-->campaign.id:1, 2021-07-25 10:23:36: 32.8°C, 0W),\n",
+       " WalliStat(id:9-->campaign.id:1, 2021-07-25 10:23:41: 32.8°C, 0W)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "WalliStat.query.filter(WalliStat.Temp>1).all()"
+    "db.session.query(WalliStat).filter(WalliStat.Temp>1).all()"
    ]
   },
   {
