WalliStat.from_series implemented

--- a/database/database_migration/migrate_log_data_to_db.ipynb
+++ b/database/database_migration/migrate_log_data_to_db.ipynb
@@ -47,7 +47,7 @@
     {
      "data": {
       "text/plain": [
-       "Campaign(id:0, 'hourly' is active:None, start:2021-12-17 21:00:00, end:None, interval:1:00:00)"
+       "Campaign(id:0, 'hourly' is active:None, start:2021-12-17 22:00:00, end:None, interval:1:00:00)"
       ]
      },
      "execution_count": 3,
@@ -74,14 +74,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\holge\\AppData\\Local\\Temp/ipykernel_632/272765373.py:7: FutureWarning: Treating datetime data as categorical rather than numeric in `.describe` is deprecated and will be removed in a future version of pandas. Specify `datetime_is_numeric=True` to silence this warning and adopt the future behavior now.\n",
+      "C:\\Users\\holge\\AppData\\Local\\Temp/ipykernel_17708/272765373.py:7: FutureWarning: Treating datetime data as categorical rather than numeric in `.describe` is deprecated and will be removed in a future version of pandas. Specify `datetime_is_numeric=True` to silence this warning and adopt the future behavior now.\n",
       "  dscr = df[\"datetime\"].describe()\n"
      ]
     },
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
        "[7 rows x 24 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
        "(24, 23)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
        "(83177, 23)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
        "(83177, 22)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
        "(1389, 22)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
        "Name: charge_state, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,99 +682,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['ver', 'charge_state', 'I_L1', 'I_L2', 'I_L3', 'Temp', 'V_L1', 'V_L2',\n",
-       "       'V_L3', 'ext_lock', 'P', 'E_cyc_hb', 'E_cyc_lb', 'E_hb', 'E_lb',\n",
-       "       'I_max', 'I_min', 'watchdog', 'standby', 'remote_lock', 'max_I_cmd',\n",
-       "       'FailSafe_I', 'datetime'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for index, row in lowres.iterrows():\n",
-    "    wst = WalliStat(datetime = index, \n",
-    "                    charging_state = int(row.charge_state), \n",
-    "                    I_L1 = row.I_L1 / 10.,\n",
-    "                    I_L2 = row.I_L2 / 10.,\n",
-    "                    I_L3 = row.I_L3 / 10.,\n",
-    "                    temperature = row.Temp / 10.,\n",
-    "                    V_L1 = int(row.V_L1),\n",
-    "                    V_L2 = int(row.V_L2),\n",
-    "                    V_L3 = int(row.V_L3),\n",
-    "                    extern_lock_state = int(row.ext_lock),\n",
-    "                    power = int(row.P),\n",
-    "                    energy_pwr_on = int((row.E_cyc_hb << 16) + row.E_cyc_lb),\n",
-    "                    energy_total = int((row.E_hb << 16) + row.E_lb),\n",
-    "                    I_max_cfg = int(row.I_max),\n",
-    "                    I_min_cfg = int(row.I_max),\n",
-    "                    modbus_watchdog_timeout = int(row.watchdog),\n",
-    "                    remote_lock = int(row.remote_lock),\n",
-    "                    I_max_cmd = int(row.max_I_cmd),\n",
-    "                    I_fail_safe = int(row.FailSafe_I), \n",
-    "                    campaign = hourly)\n",
-    "    db.session.add(wst)\n",
+    "for index, row in lowres.reset_index().iterrows():\n",
+    "    row[\"campaign_id\"] = 0   # hourly campaign\n",
+    "    ws = WalliStat.from_series(row)\n",
+    "    db.session.add(ws)\n",
     "db.session.commit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ver               264\n",
-       "charge_state        7\n",
-       "I_L1              105\n",
-       "I_L2               98\n",
-       "I_L3               92\n",
-       "Temp              214\n",
-       "V_L1              232\n",
-       "V_L2              231\n",
-       "V_L3              234\n",
-       "ext_lock            1\n",
-       "P                6897\n",
-       "E_cyc_hb            5\n",
-       "E_cyc_lb        56995\n",
-       "E_hb                8\n",
-       "E_lb            41066\n",
-       "I_max              10\n",
-       "I_min               6\n",
-       "watchdog        15000\n",
-       "standby             4\n",
-       "remote_lock         1\n",
-       "max_I_cmd         100\n",
-       "FailSafe_I        100\n",
-       "Name: 2021-11-09 20:00:00, dtype: int64"
+       "WalliStat(id:1389-->campaign.id:0, 2021-11-09 20:00:00: 21.4°C, 6897W)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "row"
+    "ws"
    ]
   },
   {
