database formats modified

--- a/database/database_migration/migrate_log_data_to_db.ipynb
+++ b/database/database_migration/migrate_log_data_to_db.ipynb
@@ -47,7 +47,7 @@
     {
      "data": {
       "text/plain": [
-       "Campaign(id:0, 'hourly' is active:None, start:2021-12-19 15:00:00, end:None, interval:1:00:00)"
+       "Campaign(id:0, 'hourly' is active:None, start:2021-12-19 17:00:00, end:None, interval:1:00:00)"
       ]
      },
      "execution_count": 3,
@@ -81,7 +81,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\holge\\AppData\\Local\\Temp/ipykernel_18116/272765373.py:7: FutureWarning: Treating datetime data as categorical rather than numeric in `.describe` is deprecated and will be removed in a future version of pandas. Specify `datetime_is_numeric=True` to silence this warning and adopt the future behavior now.\n",
+      "C:\\Users\\holge\\AppData\\Local\\Temp/ipykernel_14736/272765373.py:7: FutureWarning: Treating datetime data as categorical rather than numeric in `.describe` is deprecated and will be removed in a future version of pandas. Specify `datetime_is_numeric=True` to silence this warning and adopt the future behavior now.\n",
       "  dscr = df[\"datetime\"].describe()\n"
      ]
     },
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -244,10 +244,7 @@
        "      <th>V_L1</th>\n",
        "      <th>V_L2</th>\n",
        "      <th>V_L3</th>\n",
-       "      <th>ext_lock</th>\n",
-       "      <th>P</th>\n",
-       "      <th>E_cyc_hb</th>\n",
-       "      <th>E_cyc_lb</th>\n",
+       "      <th>...</th>\n",
        "      <th>E_hb</th>\n",
        "      <th>E_lb</th>\n",
        "      <th>I_max</th>\n",
@@ -273,10 +270,7 @@
        "      <td>237</td>\n",
        "      <td>237</td>\n",
        "      <td>239</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>18424</td>\n",
+       "      <td>...</td>\n",
        "      <td>5</td>\n",
        "      <td>2495</td>\n",
        "      <td>10</td>\n",
@@ -300,10 +294,7 @@
        "      <td>238</td>\n",
        "      <td>237</td>\n",
        "      <td>239</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>18424</td>\n",
+       "      <td>...</td>\n",
        "      <td>5</td>\n",
        "      <td>2495</td>\n",
        "      <td>10</td>\n",
@@ -327,10 +318,7 @@
        "      <td>237</td>\n",
        "      <td>237</td>\n",
        "      <td>239</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>18424</td>\n",
+       "      <td>...</td>\n",
        "      <td>5</td>\n",
        "      <td>2495</td>\n",
        "      <td>10</td>\n",
@@ -354,10 +342,7 @@
        "      <td>237</td>\n",
        "      <td>237</td>\n",
        "      <td>239</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>18424</td>\n",
+       "      <td>...</td>\n",
        "      <td>5</td>\n",
        "      <td>2495</td>\n",
        "      <td>10</td>\n",
@@ -381,10 +366,7 @@
        "      <td>237</td>\n",
        "      <td>237</td>\n",
        "      <td>239</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>18424</td>\n",
+       "      <td>...</td>\n",
        "      <td>5</td>\n",
        "      <td>2495</td>\n",
        "      <td>10</td>\n",
@@ -398,32 +380,35 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 24 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       time  ver  charge_state  I_L1  I_L2  I_L3  Temp  V_L1  V_L2  V_L3  \\\n",
-       "0  00:00:13  264             2     0     0     0   202   237   237   239   \n",
-       "1  00:01:13  264             2     0     0     0   202   238   237   239   \n",
-       "2  00:02:13  264             2     0     0     0   202   237   237   239   \n",
-       "3  00:03:13  264             2     0     0     0   202   237   237   239   \n",
-       "4  00:04:13  264             2     0     0     0   202   237   237   239   \n",
+       "       time  ver  charge_state  I_L1  I_L2  I_L3  Temp  V_L1  V_L2  V_L3  ...  \\\n",
+       "0  00:00:13  264             2     0     0     0   202   237   237   239  ...   \n",
+       "1  00:01:13  264             2     0     0     0   202   238   237   239  ...   \n",
+       "2  00:02:13  264             2     0     0     0   202   237   237   239  ...   \n",
+       "3  00:03:13  264             2     0     0     0   202   237   237   239  ...   \n",
+       "4  00:04:13  264             2     0     0     0   202   237   237   239  ...   \n",
        "\n",
-       "   ext_lock  P  E_cyc_hb  E_cyc_lb  E_hb  E_lb  I_max  I_min  watchdog  \\\n",
-       "0         1  0         2     18424     5  2495     10      6     15000   \n",
-       "1         1  0         2     18424     5  2495     10      6     15000   \n",
-       "2         1  0         2     18424     5  2495     10      6     15000   \n",
-       "3         1  0         2     18424     5  2495     10      6     15000   \n",
-       "4         1  0         2     18424     5  2495     10      6     15000   \n",
+       "   E_hb  E_lb  I_max  I_min  watchdog  standby  remote_lock  max_I_cmd  \\\n",
+       "0     5  2495     10      6     15000        4            1        100   \n",
+       "1     5  2495     10      6     15000        4            1        100   \n",
+       "2     5  2495     10      6     15000        4            1        100   \n",
+       "3     5  2495     10      6     15000        4            1        100   \n",
+       "4     5  2495     10      6     15000        4            1        100   \n",
        "\n",
-       "   standby  remote_lock  max_I_cmd  FailSafe_I            datetime  \n",
-       "0        4            1        100         100 2021-10-07 00:00:13  \n",
-       "1        4            1        100         100 2021-10-07 00:01:13  \n",
-       "2        4            1        100         100 2021-10-07 00:02:13  \n",
-       "3        4            1        100         100 2021-10-07 00:03:13  \n",
-       "4        4            1        100         100 2021-10-07 00:04:13  "
+       "   FailSafe_I            datetime  \n",
+       "0         100 2021-10-07 00:00:13  \n",
+       "1         100 2021-10-07 00:01:13  \n",
+       "2         100 2021-10-07 00:02:13  \n",
+       "3         100 2021-10-07 00:03:13  \n",
+       "4         100 2021-10-07 00:04:13  \n",
+       "\n",
+       "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +432,7 @@
        "(24, 23)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -690,84 +675,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exception: int() argument must be a string, a bytes-like object or a number, not 'NaTType'\n",
-      "arg 'series': datetime        2021-11-16 09:00:00\n",
-      "ver                             NaT\n",
-      "charge_state                    NaT\n",
-      "I_L1                            NaT\n",
-      "I_L2                            NaT\n",
-      "I_L3                            NaT\n",
-      "Temp                            NaT\n",
-      "V_L1                            NaT\n",
-      "V_L2                            NaT\n",
-      "V_L3                            NaT\n",
-      "ext_lock                        NaT\n",
-      "P                               NaT\n",
-      "E_cyc_hb                        NaT\n",
-      "E_cyc_lb                        NaT\n",
-      "E_hb                            NaT\n",
-      "E_lb                            NaT\n",
-      "I_max                           NaT\n",
-      "I_min                           NaT\n",
-      "watchdog                        NaT\n",
-      "standby                         NaT\n",
-      "remote_lock                     NaT\n",
-      "max_I_cmd                       NaT\n",
-      "FailSafe_I                      NaT\n",
-      "campaign_id                       0\n",
-      "Name: 1545, dtype: object\n",
-      "Exception: int() argument must be a string, a bytes-like object or a number, not 'NaTType'\n",
-      "arg 'series': datetime        2021-11-22 18:00:00\n",
-      "ver                             NaT\n",
-      "charge_state                    NaT\n",
-      "I_L1                            NaT\n",
-      "I_L2                            NaT\n",
-      "I_L3                            NaT\n",
-      "Temp                            NaT\n",
-      "V_L1                            NaT\n",
-      "V_L2                            NaT\n",
-      "V_L3                            NaT\n",
-      "ext_lock                        NaT\n",
-      "P                               NaT\n",
-      "E_cyc_hb                        NaT\n",
-      "E_cyc_lb                        NaT\n",
-      "E_hb                            NaT\n",
-      "E_lb                            NaT\n",
-      "I_max                           NaT\n",
-      "I_min                           NaT\n",
-      "watchdog                        NaT\n",
-      "standby                         NaT\n",
-      "remote_lock                     NaT\n",
-      "max_I_cmd                       NaT\n",
-      "FailSafe_I                      NaT\n",
-      "campaign_id                       0\n",
-      "Name: 1698, dtype: object\n",
-      "Exception: int() argument must be a string, a bytes-like object or a number, not 'NaTType'\n",
-      "arg 'series': datetime        2021-12-15 11:00:00\n",
-      "ver                             NaT\n",
-      "charge_state                    NaT\n",
-      "I_L1                            NaT\n",
-      "I_L2                            NaT\n",
-      "I_L3                            NaT\n",
-      "Temp                            NaT\n",
-      "V_L1                            NaT\n",
-      "V_L2                            NaT\n",
-      "V_L3                            NaT\n",
-      "ext_lock                        NaT\n",
-      "P                               NaT\n",
-      "E_cyc_hb                        NaT\n",
-      "E_cyc_lb                        NaT\n",
-      "E_hb                            NaT\n",
-      "E_lb                            NaT\n",
-      "I_max                           NaT\n",
-      "I_min                           NaT\n",
-      "watchdog                        NaT\n",
-      "standby                         NaT\n",
-      "remote_lock                     NaT\n",
-      "max_I_cmd                       NaT\n",
-      "FailSafe_I                      NaT\n",
-      "campaign_id                       0\n",
-      "Name: 2243, dtype: object\n"
+      "Exception: int() argument must be a string, a bytes-like object or a number, not 'NaTType' 2021-11-16 09:00:00\n",
+      "Exception: int() argument must be a string, a bytes-like object or a number, not 'NaTType' 2021-11-22 18:00:00\n",
+      "Exception: int() argument must be a string, a bytes-like object or a number, not 'NaTType' 2021-12-15 11:00:00\n"
      ]
     }
    ],
@@ -787,7 +697,7 @@
     {
      "data": {
       "text/plain": [
-       "WalliStat(id:2341-->campaign.id:0, 2021-12-19 12:00:00: 11.1°C, 0W)"
+       "WalliStat(id:2341-->campaign.id:0, 2021-12-19 12:00:00: 11.1°C, 0.0kW)"
       ]
      },
      "execution_count": 17,
