relationship cascade="all, delete"

--- a/database/database_basics/read_db.ipynb
+++ b/database/database_basics/read_db.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,28 +19,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[WalliStat(id:1-->campaign.id:0, 2021-07-25 01:01:53: 27.5°C, 0W),\n",
-       " WalliStat(id:2-->campaign.id:0, 2021-07-25 01:01:58: 27.5°C, 0W),\n",
-       " WalliStat(id:3-->campaign.id:0, 2021-07-25 01:02:15: 27.5°C, 0W),\n",
-       " WalliStat(id:4-->campaign.id:0, 2021-07-25 01:02:20: 27.5°C, 43W),\n",
-       " WalliStat(id:5-->campaign.id:0, 2021-07-25 01:02:25: 27.5°C, 531W),\n",
-       " WalliStat(id:6-->campaign.id:0, 2021-07-25 01:02:30: 27.5°C, 1641W),\n",
-       " WalliStat(id:7-->campaign.id:1, 2021-07-25 10:23:31: 32.8°C, 0W),\n",
-       " WalliStat(id:8-->campaign.id:1, 2021-07-25 10:23:36: 32.8°C, 0W),\n",
-       " WalliStat(id:9-->campaign.id:1, 2021-07-25 10:23:41: 32.8°C, 0W)]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "db.session.query(WalliStat).all()"
    ]
@@ -54,20 +35,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Campaign(id:0, 'hourly' is active:True, start:2021-12-10 22:00:00, end:None, interval:1:00:00)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "hourly = db.session.query(Campaign).filter(Campaign.title==\"hourly\").first()\n",
     "hourly"
@@ -75,50 +45,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[WalliStat(id:1-->campaign.id:0, 2021-07-25 01:01:53: 27.5°C, 0W),\n",
-       " WalliStat(id:2-->campaign.id:0, 2021-07-25 01:01:58: 27.5°C, 0W),\n",
-       " WalliStat(id:3-->campaign.id:0, 2021-07-25 01:02:15: 27.5°C, 0W),\n",
-       " WalliStat(id:4-->campaign.id:0, 2021-07-25 01:02:20: 27.5°C, 0W),\n",
-       " WalliStat(id:5-->campaign.id:0, 2021-07-25 01:02:25: 27.5°C, 531W),\n",
-       " WalliStat(id:6-->campaign.id:0, 2021-07-25 01:02:30: 27.5°C, 1641W)]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "hourly.walli_stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[WalliStat(id:1-->campaign.id:0, 2021-07-25 01:01:53: 27.5°C, 0W),\n",
-       " WalliStat(id:2-->campaign.id:0, 2021-07-25 01:01:58: 27.5°C, 0W),\n",
-       " WalliStat(id:3-->campaign.id:0, 2021-07-25 01:02:15: 27.5°C, 0W),\n",
-       " WalliStat(id:4-->campaign.id:0, 2021-07-25 01:02:20: 27.5°C, 43W),\n",
-       " WalliStat(id:5-->campaign.id:0, 2021-07-25 01:02:25: 27.5°C, 531W),\n",
-       " WalliStat(id:6-->campaign.id:0, 2021-07-25 01:02:30: 27.5°C, 1641W)]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "db.session.query(WalliStat).filter(WalliStat.campaign==hourly).all()"
    ]
@@ -132,28 +70,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[WalliStat(id:1-->campaign.id:0, 2021-07-25 01:01:53: 27.5°C, 0W),\n",
-       " WalliStat(id:2-->campaign.id:0, 2021-07-25 01:01:58: 27.5°C, 0W),\n",
-       " WalliStat(id:3-->campaign.id:0, 2021-07-25 01:02:15: 27.5°C, 0W),\n",
-       " WalliStat(id:4-->campaign.id:0, 2021-07-25 01:02:20: 27.5°C, 43W),\n",
-       " WalliStat(id:5-->campaign.id:0, 2021-07-25 01:02:25: 27.5°C, 500W),\n",
-       " WalliStat(id:6-->campaign.id:0, 2021-07-25 01:02:30: 27.5°C, 500W)]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "db.session.query(WalliStat).filter(WalliStat.Power > 500).update({\"Power\": 500})\n",
-    "db.session.query(WalliStat).filter(WalliStat.campaign==hourly).all()"
+    "P500 = db.session.query(WalliStat).filter(WalliStat.campaign==hourly).all()\n",
+    "P500"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pid6 = P500[5]\n",
+    "pid6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pid6.campaign"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.session.delete(pid6)\n",
+    "db.session.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cmps = db.session.query(Campaign).all()\n",
+    "cmps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.session.delete(cmps[1])\n",
+    "db.session.commit()"
    ]
   },
   {
