--- a/modbus/simple_modbus_rtu_server.ipynb
+++ b/modbus/simple_modbus_rtu_server.ipynb
@@ -28,11 +28,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "``logging`` is for visualization only, and not required for the server to function"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -77,8 +77,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stderr",
+     "output_type": "stream",
      "text": [
       "2021-07-17 10:35:12,911 MainThread      DEBUG    sync           :46       Client Connected [COM10:COM10]\n",
       "2021-07-17 10:35:12,911 MainThread      DEBUG    sync           :581      Started thread to serve client\n",
@@ -129,8 +129,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.7.9 64-bit ('plotly_env': conda)"
+   "display_name": "Python 3.9.7 ('flask_env')",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -142,10 +143,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.7"
   },
-  "interpreter": {
-   "hash": "8a3da205aec800232e7a4eb8c8865d1642f42c5c4533c6365e5c91340a61c38b"
+  "vscode": {
+   "interpreter": {
+    "hash": "7df3afec6b93bfc6b4497fa02400d11f1674743b2656ffd458993e7a63d95c87"
+   }
   }
  },
  "nbformat": 4,
